--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -8,4 +8,8 @@ date: "2025-10-23"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r}
 
+data <- read_excel("SCS_BAC_and_BrAC_split_TOP.xlsx")
+
+```
