task 2 and 3 in rmd

--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -190,3 +190,117 @@ summary(beta_fit)
 par(mar=c(1, 1, 1, 1))
 plot(beta_fit)
 ```
+
+## Task 2
+
+```{r task_2, echo=FALSE, message=FALSE}
+
+# test person info (given in question)
+test_person <- data.frame(weight = 70, height = 160, age = 70, sex = "female")
+
+# predicted Beta60 using from regression model
+pred_vals <- predict(model, newdata = test_person, interval = "prediction", level = 0.95)
+pred_vals
+
+# Ct and t from question
+Ct <- 0.15
+t  <- 2
+
+# empirical quantiles for Beta60 (population approach)
+beta_pop <- quantile(data$beta60, probs = c(0.025, 0.5, 0.975))
+beta_pop
+
+# C0 values using population quantiles
+C0_pop <- Ct + beta_pop * t
+C0_pop_abs <- Ct + abs(beta_pop) * t   # absolute values since beta60 is negative
+
+# C0 values using model prediction
+beta_pred <- as.numeric(pred_vals)
+names(beta_pred) <- c("Fitted", "Lower (PI 2.5%)", "Upper (PI 97.5%)")
+
+C0_model <- Ct + beta_pred * t
+C0_model_abs <- Ct + abs(beta_pred) * t
+
+# combine results into one comparison table 
+results_table <- tibble(
+  Approach = c("Population (empirical quantiles)", "Model-based (predicted)"),
+  Lower_2.5 = c(C0_pop_abs[1], C0_model_abs[2]),  # note ordering: lwr=2nd col in pred
+  Central   = c(C0_pop_abs[2], C0_model_abs[1]),
+  Upper_97.5 = c(C0_pop_abs[3], C0_model_abs[3])
+)
+
+kable(results_table, digits = 3,
+      col.names = c("Approach", "Lower (2.5%)", "Central", "Upper (97.5%)"),
+      caption = "Comparison of estimated C₀ values for the population and model-based approaches")
+```
+
+
+## Task 3
+
+```{r task_3, echo=FALSE, message=FALSE}
+
+# define A, Co, Vd
+data$A <- data$`Amount of Alcohol Consumed (g)`
+data$Co <- data$`Co (g/Kg)`
+data$Vd <- data$A/(data$Co *data$weight)
+
+# view summary and quantiles of Vd
+summary(data$Vd)
+quantile(data$Vd, probs = c(0.025, 0.5, 0.975))
+
+# histogram of Vd
+ggplot(data, aes(x = Vd)) +
+  geom_histogram(bins = 20, colour = "navy", fill = "steelblue") +
+  labs(title = "Distribution of Volume of Distribution (Vd)",
+       x = "Vd (L/kg)", y = "Count")
+
+# Vd vs weight
+weight_plot2 <- ggplot(data, aes(x = weight, y = Vd, colour = sex)) +
+  geom_point() +
+  geom_smooth(method = "lm", colour = "navy") +
+  scale_colour_manual(values = c("male" = "steelblue", "female" = "lightblue")) +
+  labs(title = "Figure 5: Vd vs Weight", x = "Weight (kg)", y = "Vd (L/kg)")
+
+# Vd vs height
+height_plot2 <- ggplot(data, aes(x = height, y = Vd, colour = sex)) +
+  geom_point() +
+  scale_colour_manual(values = c("male" = "steelblue", "female" = "lightblue")) +
+  geom_smooth(method = "lm", colour = "navy") +
+  labs(title = "Figure 6: Vd vs Height", x = "Height (cm)", y = "Vd (L/kg)")
+
+# Vd vs age
+age_plot2 <- ggplot(data, aes(x = age, y = Vd, colour = sex)) +
+  geom_point() +
+  scale_colour_manual(values = c("male" = "steelblue", "female" = "lightblue")) +
+  geom_smooth(method = "lm", colour = "navy") +
+  labs(title = "Figure 7: Vd vs Age", x = "Age (years)", y = "Vd (L/kg)")
+
+# Vd vs gender
+sex_plot2 <- ggplot(data, aes(x = sex, y = Vd,
+                             fill = sex)) +
+  geom_violin(alpha = 0.8) +
+  geom_boxplot(width = 0.2, color = "navy", alpha = 0.7) +
+  scale_fill_manual(values = c("lightblue", "steelblue")) +
+  labs(
+    title = "Figure 8: Vd vs Gender",
+    x = "Gender",
+    y = "Vd (L/kg)"
+  ) +
+  guides(fill = "none") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+(weight_plot2 + height_plot2) /
+  (age_plot2 + sex_plot2) /
+  plot_layout(ncol = 1) +
+  plot_annotation(
+    title = "Vd Characteristics Plots",
+    theme = theme(plot.title = element_text(size = 16, face = "bold"))
+  )
+
+# test correlation to investigate independent assumption
+cor.test(data$beta60, data$Vd, use = "complete.obs")
+
+# view quantiles of each coefficient for comparison
+beta_range <- quantile(data$beta60, probs = c(0.025, 0.975))
+Vd_range   <- quantile(data$Vd,     probs = c(0.025, 0.975))
+```
